--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ requests = "^2.32.3"
 openai = "^1.51.2"
 python-dotenv = "^1.0.1"
 tiktoken = "^0.7.0"
+rich = "^13.9.4"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.2"
