feat(phase3-4): add multi-agent orchestrator, M3 procedural memory, CLI task, e2e scripts
Implements PRD Stage 3 and 4: introduces Orchestrator with Planner and base sub-agents
(RAGQueryAgent, DatabaseQueryAgent, ReportGenerationAgent, WebSearchAgent, ShellCommandAgent),
adds procedural_memory schema and DB helpers, integrates Phase 4 reuse+learning flow, extends
CLI with `memfuse task`, provides end-to-end scripts and tests. Updates README and env.

--- a/.env.example
+++ b/.env.example
@@ -43,3 +43,8 @@ EXTRACTOR_DEDUP_TOP_K=10
 
 # --- Optional system prompt override ---
 # SYSTEM_PROMPT="You are MemFuse, a helpful assistant..."
+
+# --- Phase 4 (Procedural / Multi-Agent) ---
+M3_ENABLED=false
+PROCEDURAL_TOP_K=5
+PROCEDURAL_REUSE_THRESHOLD=0.9
