--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ rich = "^13.9.4"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.2"
 responses = "^0.25.3"
+pytest-mock = "^3.14.0"
 
 [tool.poetry.scripts]
 memfuse = "memfuse.cli:main"
