feat(cli): add interactive multiline input with editor support
- Integrate prompt_toolkit to enable multiline input with custom key bindings
- Add /edit command to open user's default editor for multiline message entry
- Support special quit commands: /exit, /quit, :q, Ctrl+Q
- Provide user guidance on input modes and commands at start of interactive session
- Allow Ctrl+C to interrupt input without quitting, Ctrl+D to exit session
- Update requirements to include click and prompt-toolkit dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ openai = "^1.51.2"
 python-dotenv = "^1.0.1"
 tiktoken = "^0.7.0"
 rich = "^13.9.4"
+click = "^8.1.7"
+prompt-toolkit = "^3.0.47"
 fastapi = "^0.104.1"
 uvicorn = {version = "^0.24.0", extras = ["standard"]}
 
